force-app/main/default/objects/Candidate__c/fields/Average_Score__c.field-meta.xml
<CustomField>
    <fullName>Average_Score__c</fullName>
    <formula>IF(Number_of_Interviews__c  &gt; 0, Sum_Average_Scores__c  /  Number_of_Interviews__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Average Score on All Interviews</inlineHelpText>
    <label>Average Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>