force-app/main/default/objects/Candidate__c/fields/CIty_State__c.field-meta.xml
<CustomField>
    <fullName>City_State__c</fullName>
    <formula>City__c + &apos;, &apos; +   TEXT(State__c)</formula>
    <label>City State</label>
    <type>Text</type>
</CustomField>