force-app/main/default/objects/Candidate__c/fields/Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Full_Name__c</fullName>
    <formula>First_Name__c + &quot; &quot; +   Last_Name__c</formula>
    <label>Full Name</label>
    <type>Text</type>
</CustomField>